# aml

./: .gitignore  COPYING  README.md  meson.build  meson_options.txt
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  libaml.cron.d.ex  libaml.doc-base.ex  libaml0.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
examples/: meson.build  nested-ticker.c  reader.c  ticker.c  uv.c  wayland.c
include/: aml.h  backend.h  thread-pool.h
src/: aml.c  epoll.c  intset.c  kqueue.c  posix.c  thread-pool.c
